--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <div align="center">
-            <font size="20px">Hello Assuta team!freezing!</font>
+            <font size="20px">Hello Assuta team!</font>
             <p/>
             <img src="cloud_skills.jpg" width="800px"/>
         </div>
